<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_home"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_name"
                android:minHeight="56dp"
                app:counterMaxLength="256"
                app:counterEnabled="true"
                app:boxStrokeColor="@color/purple_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="256"
                    android:inputType="text"
                    android:minHeight="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_email"
                android:minHeight="56dp"
                app:counterMaxLength="256"
                app:counterEnabled="true"
                app:boxStrokeColor="@color/purple_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="256"
                    android:inputType="textEmailAddress"
                    android:minHeight="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_phone"
                android:minHeight="56dp"
                app:prefixText="+88"
                app:counterMaxLength="14"
                app:counterEnabled="true"
                app:boxStrokeColor="@color/purple_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="14"
                    android:inputType="phone"
                    android:minHeight="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_full_address"
                android:minHeight="56dp"
                app:counterMaxLength="512"
                app:counterEnabled="true"
                app:boxStrokeColor="@color/purple_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="512"
                    android:inputType="text"
                    android:minHeight="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_university"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_name_of_university"
                android:minHeight="56dp"
                app:counterMaxLength="256"
                app:counterEnabled="true"
                app:boxStrokeColor="@color/purple_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_university"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="256"
                    android:inputType="text"
                    android:minHeight="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_grad_year"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_graduation_year"
                android:minHeight="56dp"
                app:boxStrokeColor="@color/purple_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_grad_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:minHeight="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_gpa"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_cgpa"
                android:minHeight="56dp"
                app:boxStrokeColor="@color/purple_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_gpa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:minHeight="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_experience"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_experience_in_months"
                android:minHeight="56dp"
                app:boxStrokeColor="@color/purple_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:minHeight="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_workplace"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_current_workplace_name"
                android:minHeight="56dp"
                app:counterMaxLength="256"
                app:counterEnabled="true"
                app:boxStrokeColor="@color/purple_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_workplace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="256"
                    android:minHeight="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_applying_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:minHeight="56dp"
                android:checkedButton="@id/rb_android"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_edit_box"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_applying_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_applying_in"
                    android:textColor="#666666" />
                <RadioButton
                    android:id="@+id/rb_android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mobile"/>
                <RadioButton
                    android:id="@+id/rb_backend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_backend"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_salary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_expected_salary"
                android:minHeight="56dp"
                app:boxStrokeColor="@color/purple_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:minHeight="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_reference"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_reference_if_any"
                android:minHeight="56dp"
                app:counterMaxLength="256"
                app:counterEnabled="true"
                app:boxStrokeColor="@color/purple_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="256"
                    android:minHeight="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_project"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_project_url"
                android:minHeight="56dp"
                app:counterMaxLength="512"
                app:counterEnabled="true"
                app:boxStrokeColor="@color/purple_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_project"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:maxLength="512"
                    android:minHeight="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rl_pdf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edit_box"
                android:minHeight="70dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_attach"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_attach" />

                <TextView
                    android:id="@+id/tv_attach_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toEndOf="@id/iv_attach"
                    android:text="@string/text_attach_your_cv_pdf_only"
                    android:textColor="#666666"
                    android:textSize="16sp"
                    android:visibility="visible" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>