<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_box"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:textColor="@color/text_normal"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tv_hint_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:color/white"
                android:paddingHorizontal="5dp"
                android:paddingVertical="2dp"
                android:text="@string/hint_username"
                android:textColor="@color/text_small"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_box"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:textColor="@color/text_normal"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tv_hint_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:color/white"
                android:paddingHorizontal="5dp"
                android:paddingVertical="2dp"
                android:text="@string/hint_password"
                android:textColor="@color/text_small"
                android:textSize="10sp" />

        </RelativeLayout>

        <Button
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:id="@+id/btn_login"
            android:text="@string/text_login"
            android:layout_marginTop="10dp"/>

        <ProgressBar
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/pb_login"
            android:visibility="gone"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>